# codeleap-backend-drf

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: entrypoint.sh  manage.py
src/api/: models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_remove_post_user_post_deleted_at_and_more.py
src/core/: settings.py  urls.py
src/tests/: conftest.py  test_post_viewset.py
